Fix letter spacing

--- a/src/PlayButton.css
+++ b/src/PlayButton.css
@@ -11,6 +11,7 @@
     font-size: 24pt;
     font-family: 'Quicksand', sans-serif;
     font-weight: bold;
+    letter-spacing: .1em;
 
     /* spacing */
     margin-top: 30px;
